# pipeline-spotify

./: .gitignore  Makefile  README.md  main.py  pyproject.toml  run_etl.py  run_etl.sh
.github/workflows/: etl.yaml  lint.yaml  test.yaml
api/: spotify.py  spotify_api.py
db/: schema.sql  setup_db.py
pipeline/: __init__.py  base.py  extract.py  load.py  metrics.py  pipeline.py  transform.py
pipeline_spotify_dbt/: dbt_project.yml  profiles.yml
pipeline_spotify_dbt/models/analytics/: dim_album.sql  dim_artist.sql  fact_album_artist.sql  schema.yml
pipeline_spotify_dbt/models/staging/: schema.yml  stg_album.sql  stg_album_artist.sql  stg_artist.sql
pipeline_spotify_dbt/tests/data/: duplicate_album_artist.sql
pipeline_spotify_dbt/tests/generic/: valid_release_year.sql
tests/: conftest.py  test_extract.py  test_load.py  test_spotify_api.py  test_transform.py
