[project]
name = "pipeline-spotify"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.3.1",
]

[dependency-groups]
dev = [
    "ruff>=0.12.7",
]

[tool.ruff]
# Directories to check
src = ["src", "tests"]

line-length = 88
indent-width = 4

lint.select = [
    "E",
    "F",
    "W",
    "C90",
    "I",
    "UP",
    "B",
    "DTZ",
    "C4",
    "RET",
    "ARG",
    "N",
    "D",
    "S",
]

lint.ignore = [
    "D203",
    "D213",
    "S101",
]

# Max complexity
lint.mccabe.max-complexity = 10

# Docstrings
lint.pydocstyle.convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
